--- a/web/src/assets/iconfont/iconfont.css
+++ b/web/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4125778 */
-  src: url('iconfont.woff2?t=1703124384910') format('woff2'),
-       url('iconfont.woff?t=1703124384910') format('woff'),
-       url('iconfont.ttf?t=1703124384910') format('truetype');
+  src: url('iconfont.woff2?t=1715987806624') format('woff2'),
+       url('iconfont.woff?t=1715987806624') format('woff'),
+       url('iconfont.ttf?t=1715987806624') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,118 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-control-simple:before {
+  content: "\e624";
+}
+
+.icon-mic-bold:before {
+  content: "\e683";
+}
+
+.icon-mic-thin:before {
+  content: "\e8c2";
+}
+
+.icon-attachment-cl:before {
+  content: "\e66a";
+}
+
+.icon-attachment-st:before {
+  content: "\e63b";
+}
+
+.icon-speaker:before {
+  content: "\e607";
+}
+
+.icon-clear:before {
+  content: "\e900";
+}
+
+.icon-bbs:before {
+  content: "\e623";
+}
+
+.icon-license:before {
+  content: "\e65a";
+}
+
+.icon-more:before {
+  content: "\e63c";
+}
+
+.icon-mj:before {
+  content: "\e643";
+}
+
+.icon-dalle:before {
+  content: "\e646";
+}
+
+.icon-xmind:before {
+  content: "\e610";
+}
+
+.icon-version:before {
+  content: "\e68d";
+}
+
+.icon-sd:before {
+  content: "\e62b";
+}
+
+.icon-huihua1:before {
+  content: "\e606";
+}
+
+.icon-chat:before {
+  content: "\e68a";
+}
+
+.icon-prompt:before {
+  content: "\e6ce";
+}
+
+.icon-share-bold:before {
+  content: "\e626";
+}
+
+.icon-cancel-share:before {
+  content: "\e682";
+}
+
+.icon-xls:before {
+  content: "\e678";
+}
+
+.icon-file:before {
+  content: "\e62f";
+}
+
+.icon-doc:before {
+  content: "\e6c2";
+}
+
+.icon-pdf:before {
+  content: "\e6c3";
+}
+
+.icon-ppt:before {
+  content: "\e642";
+}
+
+.icon-txt:before {
+  content: "\e644";
+}
+
+.icon-sql:before {
+  content: "\e65b";
+}
+
+.icon-md:before {
+  content: "\e63a";
 }
 
 .icon-loading:before {
@@ -180,4 +292,3 @@
 .icon-github:before {
   content: "\e66f";
 }
-
