--- a/web/src/assets/css/mobile/chat-list.styl
+++ b/web/src/assets/css/mobile/chat-list.styl
@@ -1,45 +1,30 @@
-$fontSize = 16px;
-.app-background {
-  background-color: #1c1c1c;
-  height: 100vh;
-}
 .mobile-chat-list {
-  background-color: #1c1c1c;
-  position: absolute;
-  top: 40px;
-  width: 100%;
-}
   .content {
-    .van-cell__value {
-      .chat-list-item {
-        display flex
-        font-size $fontSize
-        color: #fff;
-        background-color: #1c1c1c;
-        .van-image {
-          min-width 32px
-          width 32px
-          height 32px
-        }
-        .van-ellipsis {
-          margin-top 5px;
-          margin-left 10px;
+    padding-top 46px
+    padding-bottom 60px
+
+    .van-list {
+      .van-cell__value {
+        .chat-list-item {
+          display flex
+          font-size 14px
+
+          .van-image {
+            min-width 32px
+            width 32px
+            height 32px
+          }
+
+          .van-ellipsis {
+            margin-top 5px;
+            margin-left 10px;
+          }
         }
       }
     }
   }
-  .van-picker-column {
-    .picker-option {
-      display flex
-      width 100%
-      padding 0 10px
-      .van-image {
-        width 20px;
-        height 20px;
-        margin-right 5px
-      }
-    }
-  }
+
+
   .van-nav-bar {
     .van-nav-bar__right {
       .van-icon {
@@ -47,12 +32,6 @@ $fontSize = 16px;
       }
     }
   }
-  .popup {
-    background-color: #1c1c1c;
-  }
-  .dialog {
-    background-color: #1c1c1c;
-  }
-  .field {
-    background-color: #1c1c1c;
-  }
+}
+
+@import "model-select.styl"
