--- a/web/src/assets/css/chat-plus.styl
+++ b/web/src/assets/css/chat-plus.styl
@@ -10,34 +10,26 @@ $borderColor = #4676d0;
     // left side
 
     .el-aside {
-      background-color: $sideBgColor;
-
-      .title-box {
-        padding: 6px 10px;
-        display: flex;
-        color: #ffffff;
-        font-size: 20px;
-
-        span {
-          padding-top: 5px;
-          padding-left: 10px;
-        }
-      }
+      //background-color: $sideBgColor;
+      padding 10px
+      width var(--el-aside-width, 320px)
 
       .chat-list {
         display: flex
         flex-flow: column
-        background-color: #28292A
-        border-top: 1px solid #2F3032
-        border-right: 1px solid #2F3032
+        //background-color: $sideBgColor
+        border-radius 10px
+        padding 10px 0
 
         .search-box {
           flex-wrap: wrap
-          padding: 10px 15px;
-          //background-color #343540
+          padding: 10px 0;
 
-          .el-input__wrapper {
-            background-color: #363535;
+          .search-input {
+            --el-input-bg-color: #363535
+            --el-input-border-color: #464545
+            --el-input-focus-border-color: #47fff1
+            --el-input-hover-border-color: #2DA39A
             box-shadow: none
           }
         }
@@ -51,9 +43,6 @@ $borderColor = #4676d0;
         }
 
         .content {
-          //display flex
-          //flex-wrap: wrap;
-          //flex-direction column
           width: 100%
           overflow-y: scroll
 
@@ -64,14 +53,17 @@ $borderColor = #4676d0;
             padding: 8px 12px
             //border-bottom: 1px solid #3c3c3c
             cursor: pointer
+            border: 1px solid #3c3c3c
+            margin-bottom 6px
+            border-radius 5px
 
             &:hover {
               background-color #343540
             }
 
             .avatar {
-              width: 28px;
-              height: 28px;
+              width: 32px;
+              height: 32px;
               border-radius: 50%;
             }
 
@@ -95,12 +87,16 @@ $borderColor = #4676d0;
               text-overflow: ellipsis;
             }
 
-            .btn {
-              display none
+
+            .chat-opt {
               position: absolute;
               right: 2px;
               top: 16px;
               color #ffffff
+
+              .el-dropdown-link {
+                color #ffffff
+              }
 
               .el-icon {
                 margin-right 8px;
@@ -110,10 +106,7 @@ $borderColor = #4676d0;
 
           .chat-list-item.active {
             background-color: #343540;
-
-            .btn {
-              display inline
-            }
+            border-color #21aa93
           }
         }
       }
@@ -121,40 +114,12 @@ $borderColor = #4676d0;
 
       .tool-box {
         display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding 0 20px 10px 20px;
+        justify-content: center;
+        padding-top 12px
         border-top 1px solid #3c3c3c;
 
-        .user-info {
-          width 100%
-          padding-top 10px;
-
-          .el-dropdown-link {
-            width 100%;
-            cursor: pointer
-            display flex
-
-            .el-image {
-              width: 20px;
-              height: 20px;
-              border-radius: 5px;
-            }
-
-            .username {
-              display flex
-              line-height 22px;
-              width 230px;
-              padding-left 10px;
-
-            }
-
-            .el-icon {
-              color: #cccccc;
-              line-height 24px;
-            }
-          }
-
+        .iconfont {
+          margin-right 5px
         }
       }
     }
@@ -164,24 +129,26 @@ $borderColor = #4676d0;
       --el-main-padding: 0;
       margin: 0;
 
-      .chat-head {
-        width: 100%;
-        height: 50px;
-        background-color: #28292A
+      .chat-container {
+        min-width: 0;
+        flex: 1;
+        background-color: var(--el-bg-color)
+        color var(--el-text-color-primary)
 
         .chat-config {
+          height 30px
+          padding 10px 30px
           display flex
-          flex-direction row
-          align-items: center;
-          justify-content center;
-          padding-top 10px;
+          justify-content center
+          justify-items center
+          border-bottom 1px solid #d9d9e3
 
           .role-select-label {
             color #ffffff
           }
 
           .el-select {
-            //max-width 150px;
+            max-width 150px;
             margin-right 10px;
           }
 
@@ -196,20 +163,10 @@ $borderColor = #4676d0;
           }
         }
 
-        .iconfont {
-          margin-right 5px;
-        }
-      }
-
-      .right-box {
-        min-width: 0;
-        flex: 1;
-        background-color: #ffffff
-        border-left: 1px solid #4f4f4f
-
         #container {
           overflow: hidden;
           width: 100%;
+          position relative
 
           ::-webkit-scrollbar {
             width: 0;
@@ -236,64 +193,98 @@ $borderColor = #4676d0;
             }
           }
 
-          .re-generate {
-            position: relative;
-            display: flex;
-            justify-content: center;
-
-            .btn-box {
-              position: absolute
-              bottom: 10px;
-
-              .el-button {
-                .el-icon {
-                  margin-right 5px;
-                }
-              }
-
-            }
-          }
-
           .input-box {
-            background-color: #ffffff
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-            padding 0 15px;
+            position absolute
+            bottom 0
+            width 100%
 
-            .input-container {
-              width 100%
-              margin: 0;
-              border: none;
-              padding: 10px 0;
+            .input-box-inner {
               display flex
-              justify-content center
-              position relative
+              background-color: #ffffff
+              justify-content: center;
+              align-items: center;
+              box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+              padding 0 15px;
 
-              .el-textarea {
+              .tool-item {
+                margin-right 15px
+                border-radius: 6px;
+                color: #19c37d;
+                display flex
+                justify-content center
+                justify-items center
+                padding 6px
+                cursor pointer
+                background #F2F2F2
 
-                .el-textarea__inner::-webkit-scrollbar {
-                  width: 0;
-                  height: 0;
+                &:hover {
+                  background #D5FAD3
+                }
+
+                .iconfont {
+                  font-size: 24px;
                 }
               }
 
-              .send-btn {
-                position absolute;
-                right 12px;
-                top 20px;
+              .input-body {
+                width 100%
+                margin: 0;
+                border: none;
+                padding: 10px 0;
+                display flex
+                justify-content center
+                position relative
 
-                .el-button {
-                  padding 8px 5px;
-                  border-radius 6px;
-                  background: rgb(25, 195, 125)
-                  color #ffffff;
-                  font-size 20px;
+                .hide-div {
+                  white-space: pre-wrap; /* 保持文本换行 */
+                  visibility: hidden; /* 隐藏 div */
+                  position: absolute; /* 脱离文档流 */
+                  line-height: 24px
+                  font-size 14px
+                  word-wrap: break-word; /* 允许单词换行 */
+                  overflow-wrap: break-word; /* 允许长单词换行，适用于现代浏览器 */
+                }
+
+                .input-border {
+                  display flex
+                  width 100%
+                  overflow hidden
+                  border: 2px solid #21AA93
+                  border-radius 10px
+                  padding 10px
+
+
+                  .prompt-input::-webkit-scrollbar {
+                    width: 0;
+                    height: 0;
+                  }
+
+                  .prompt-input {
+                    width 100%
+                    line-height: 24px
+                    border none
+                    font-size 14px
+                    background none
+                    resize: none
+                    white-space: pre-wrap; /* 保持文本换行 */
+                    word-wrap: break-word; /* 允许单词换行 */
+                    overflow-wrap: break-word; /* 允许长单词换行，适用于现代浏览器 */
+                  }
+
+                  .send-btn {
+                    width 32px
+                    margin-left 10px
+                    .el-button {
+                      padding 8px 5px;
+                      border-radius 6px;
+                      font-size 20px;
+                    }
+                  }
+
                 }
               }
-
             }
+
           }
         }
 
@@ -385,12 +376,9 @@ $borderColor = #4676d0;
   .el-dialog {
     .el-dialog__body {
       .notice {
-        padding 0 20px 0 20px
+        //padding 0 20px 0 20px
         line-height 1.8
-
-        .el-text {
-          font-size 16px
-        }
+        font-size 16px
       }
     }
   }
