--- a/web/src/assets/css/main.styl
+++ b/web/src/assets/css/main.styl
@@ -9,7 +9,6 @@ body,
 .wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -19,6 +18,10 @@ body {
 }
 
 .admin-home {
+  overflow hidden
+  position relative
+  height 100vh
+
   a {
     text-decoration: none
   }
@@ -34,22 +37,28 @@ body {
     transition: left .3s ease-in-out;
     background: #f0f0f0;
 
+    ::-webkit-scrollbar {
+      width: 8px; /* 滚动条宽度 */
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: #666666;
+      border-radius 8px
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #999999;
+    }
+
     .content {
       width: auto;
-      height: 100%;
-      padding: 10px;
       overflow-y: scroll;
       box-sizing: border-box;
 
       .container {
-        padding: 30px;
-        background: #fff;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-
-        .handle-box {
-          margin-bottom: 20px;
-        }
+        padding: 15px 20px 30px 20px;
+        background: #ffffff;
+        margin-bottom 80px
       }
 
       .crumbs {
@@ -57,7 +66,7 @@ body {
       }
 
       .el-table th {
-        background-color: #f5f7fa !important;
+        background-color: #f5f7fa;
       }
 
       .pagination {
@@ -138,6 +147,23 @@ body {
       [hidden] {
         display: none !important;
       }
+    }
+
+    .dark {
+      background: var(--el-bg-color);
+
+      .container {
+        background: var(--el-bg-color);
+      }
+
+      .crumbs {
+        margin: 10px 0;
+      }
+
+      .el-table th {
+        background-color: var(--el-fill-color-darker);
+      }
+
     }
   }
 
